# tuimail

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
src/: app.rs  background_tasks.rs  cli.rs  database.rs  email_content.rs  event_handler.rs  lib.rs  main.rs  notifications.rs  state.rs  sync.rs  terminal.rs  types.rs  ui.rs
src/gmail_api/: auth.rs  labels.rs  messages.rs  mod.rs  operations.rs
tests/: database_removal_fix_test.rs  database_removal_test.rs  event_handler_test.rs  integration_test.rs  spam_test.rs  sync_loop_test.rs  ui_blocking_test.rs
